--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ env_realtimestt/
 example_rvc/assets/
 server/
 RealtimeSTT.code-workspace
+check_versions.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
